[Fix] 상단 버튼(btn-area) 좌우 정렬 수정 (display:flex; gap: 10px;)

--- a/hcnc_init/src/main/resources/static/css/ui-style.css
+++ b/hcnc_init/src/main/resources/static/css/ui-style.css
@@ -51,7 +51,12 @@
 /*=================================================================================
  * Button Style
  =================================================================================*/
- .btn-area{}
+
+ .btn-area {
+     display: flex;
+     gap: 10px;
+ }
+
  .btn-area button,
  .btn-area .btn{
     display: inline-flex;
